# bev-lidar-sim

./: AGENTS.md  LICENSE  README.md  demo.py  drive.py  lidar.py  pyproject.toml  render.py  requirements.txt  scene.py  sim.py  viz.py
bev_lidar_sim/: __init__.py
bev_lidar_sim/cli/: __init__.py  drive.py
bev_lidar_sim/maps/: __init__.py  roadgraph.py
bev_lidar_sim/render/: live.py
bev_lidar_sim/sim/: __init__.py  arterial.py  scenarios.py  traffic.py
bev_lidar_sim/sim/city/: graph.py  simulator.py  world.py
src/bev_lidar_sim/: __init__.py  demo.py  drive.py  render.py  sim.py  viz.py
src/bev_lidar_sim/cli/: demo.py  drive.py
src/bev_lidar_sim/maps/: __init__.py  roadgraph.py
src/bev_lidar_sim/render/: __init__.py  live.py  stills.py
src/bev_lidar_sim/sensors/: __init__.py  lidar.py  scene.py
src/bev_lidar_sim/sim/: __init__.py  arterial.py  traffic.py
src/bev_lidar_sim/sim/city/: __init__.py  graph.py  simulator.py  world.py
tests/: test_arterial.py  test_city.py  test_render.py  test_roadgraph.py  test_scenarios.py
