[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bev-lidar-sim"
version = "0.1.0"
description = "A 2D BEV LiDAR sensor and path-based traffic simulator."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pillow>=9.0",
    "pygame>=2.5",
]

[project.scripts]
bev-drive = "bev_lidar_sim.cli.drive:main"
bev-demo = "bev_lidar_sim.cli.demo:main"

[tool.setuptools.packages.find]
where = ["src"]
